added another collection with different documentation
